docker 安裝流程未完

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,12 +1,9 @@
 ---
-- hosts: ironman
-  tasks:
-    # task 1
-    - name: test connection
-      ping:
-      register: message
-
-    # task 2
-    - name: print debug message
-      debug:
-        msg: "{{ message }}"
+- hosts: debian10
+  roles:
+      - { role: docker, become: yes }
+      # become 代表我們要升高當前使用者權限 （等效於 Unix / Linux 中的 sudo 指令）來運行當前工作
+  # tasks:
+  #   - name: print debug message
+  #     debug:
+  #       msg: "test"
