--- a/roles/docker/tasks/docker-users.yml
+++ b/roles/docker/tasks/docker-users.yml
@@ -1,6 +1,6 @@
 ---
 - name: Ensure docker users are added to the docker group.
   user:
-    name: "{{ item }}"
+    name: vagrant
     groups: docker
     append: true
