--- a/roles/docker/tasks/addGpg.yml
+++ b/roles/docker/tasks/addGpg.yml
@@ -3,34 +3,20 @@
 - name: Update repositories cache
   apt:
     update_cache: yes
-- name: Install the package "apt-transport-https"
-  apt:
-    name: apt-transport-https
-    state: present
 
-- name: Install the package "ca-certificates"
+- name: Install tools
   apt:
-    name: ca-certificates
+    name: "{{item}}"
     state: present
-
-- name: Install the package "curl"
-  apt:
-    name: curl
-    state: present
-
-- name: Install the package "gnupg"
-  apt:
-    name: gnupg
-    state: present
-
-- name: Install the package "lsb-release"
-  apt:
-    name: lsb-release
-    state: present
+  with_items:
+    - apt-transport-https
+    - ca-certificates
+    - curl
+    - gnupg
+    - lsb-release
 
 - name: Add Docker apt key (alternative for older systems without SNI 1).
-  shell: >
-    curl -fsSL https://download.docker.com/linux/debian/gpg | sudo gpg --dearmor --yes -o /usr/share/keyrings/docker-archive-keyring.gpg
+  shell: "curl -fsSL {{apt_key_url}} | sudo gpg --dearmor --yes -o /usr/share/keyrings/docker-archive-keyring.gpg"
 
 - name: Add Docker apt key (alternative for older systems without SNI 2).
   shell: >
