--- a/roles/docker/tasks/removeDocker.yml
+++ b/roles/docker/tasks/removeDocker.yml
@@ -1,21 +1,12 @@
 ---
+
 - name: Remove docker
   apt:
-    name: docker
+    name: "{{item}}"
     state: absent
-- name: Remove docker-engine
-  apt:
-    name: docker-engine
-    state: absent
-- name: Remove docker.io
-  apt:
-    name: docker.io
-    state: absent
-- name: Remove containerd
-  apt:
-    name: containerd
-    state: absent
-- name: Remove runc
-  apt:
-    name: runc
-    state: absent
+  with_items:
+    - docker
+    - docker-engine
+    - docker.io
+    - containerd
+    - runc
