--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: debian10
   roles:
-      - { role: docker, become: yes }
+      - { role: testGroup }
       # become 代表我們要升高當前使用者權限 （等效於 Unix / Linux 中的 sudo 指令）來運行當前工作
       # - { role: docker-jenkins, become: yes }
   # vars:
