新增ANSIBLE 連線IP 範例

--- a/playbook.yml
+++ b/playbook.yml
@@ -6,7 +6,7 @@
 
 - hosts: centos7
   roles:
-      - { role: firewalld, become: yes }
+      - { role: getInformation, become: yes }
       # become 代表我們要升高當前使用者權限 （等效於 Unix / Linux 中的 sudo 指令）來運行當前工作
       # - { role: docker-jenkins, become: yes }
   # vars:
